package concuroo.nodes.expression;

public interface ArithmeticBinaryExpression extends BinaryExpression {

}
