package concuroo.nodes.expression;

public interface LogicalBinaryExpression extends BinaryExpression {

}
