package concuroo.nodes.expression;

public interface PrefixExpression extends UnaryExpression {

}
