package concuroo.nodes.expression;

import concuroo.nodes.Node;

public class assignmentExpression implements Node {

  @Override
  public String getLiteral() {
    return null;
  }
}