package concuroo.nodes.expression;

import concuroo.nodes.Node;

public class expression implements Node {

  @Override
  public String getLiteral() {
    return null;
  }
}