package concuroo.nodes.expression.lhsExpression;

import concuroo.nodes.expression.Expression;

public interface LHSExpression extends Expression {

}
