package concuroo.nodes.expression;

import concuroo.nodes.Node;

public class postfixExpression implements Node {

  @Override
  public String getLiteral() {
    return null;
  }
}