package concuroo.nodes.statement;

import concuroo.nodes.Statement;

public interface JumpStatement extends Statement {

}
