package concuroo.nodes.statement;

import concuroo.nodes.Statement;

public interface SelectionStatement extends Statement {

}
